GEODE-5988: Update Apache Geode website's "Community" page

--- a/website/content/community/index.html
+++ b/website/content/community/index.html
@@ -89,7 +89,7 @@ under the License. -->
     <div class="container">
     	<div class="row">
     	    <div class="col-md-12" id="live">
-    	    	<h2 class="icns-chat"><span>Live Chat and Geode Clubhouse</span></h2>
+    	    	<h2 class="icns-chat"><span>Live Chat and Geode Presentations</span></h2>
 			</div>
 		</div>
 		<div class="row">
@@ -98,153 +98,28 @@ under the License. -->
         	<p>The Geode team is always ready to answer questions on <a href="http://stackoverflow.com/search?q=Apache%20Geode">StackOverflow</a><p>
       </div>
       <div class="col-md-4">
-        	<h3><a target="_blank" href="https://www.youtube.com/channel/UCaY2q0UlWjAgEGL7uhCLs6A">Geode ClubHouse</a></h3>
-        	<p>We meet periodically online for discussions around specific features, detailing internals and discuss on-going issues on JIRA at the Geode Clubhouse. All meetings are recorded and videos are available in our <a href="https://www.youtube.com/channel/UCaY2q0UlWjAgEGL7uhCLs6A">YouTube</a> channel.<p>
+        	<h3><a target="_blank" href="https://www.youtube.com/user/PivotalOpenSourceHub">Pivotal Open Source Hub</a></h3>
+        	<p>A YouTube channel with <a target="_blank" href="https://www.youtube.com/user/PivotalOpenSourceHub">Apache Geode videos and presentations</a>, including:<p>
+                <ul>
+                <li><a target="_blank" href="https://www.youtube.com/playlist?list=PL62pIycqXx-SrrC-iIYJmIEojOo3V27ho">Apache Geode By Example</a></li>
+                <li><a target="_blank" href="https://www.youtube.com/playlist?list=PL62pIycqXx-ShuJ1YpV2wlmNZodnqzY8T">Geode Summit 2018 at SpringOne</a></li>
+                <li><a target="_blank" href="https://www.youtube.com/playlist?list=PL62pIycqXx-RbKoMA9_QQ_0Wh64AwMdLK">Geode How-to Series</a></li>
+                <li><a target="_blank" href="https://www.youtube.com/playlist?list=PL62pIycqXx-R6IxZBlFyD_gq1EwT5CGE-">Geode Clubhouse</a></li>
+                </ul>
       </div>
 	  </div>
-</section>
-
-<section class="bf-community">
-    <div class="container">
-    	<div class="row">
-    	    <div class="col-md-12">
-    	    	<h2 class="icns-briefcase" id="deployments"><span>Deployments</span></h2>
-			</div>
-		</div>
-		<div class="row">
-			<a href="#">
-	    	    <div class="col-md-3">
-	    	    	<h3>Your project!</h3>
-	    	    	<p><p>
-				</div>
-			</a>
-			<!-- <a href="#">
-				<div class="col-md-3">
-	    	    	<h3>Project ABC</h3>
-	    	    	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam finibus cursus est. Morbi consequat velit ac aliquet elementum. Vivamus gravida blandit accumsan. Mauris commodo consectetur velit, quis malesuada velit semper ac. Vivamus egestas massa et placerat rhoncus.<p>
-				</div>
-			</a> -->
-			<div class="col-md-3">
-				<h3>&nbsp;</h3>
-    	    	<p><i>Want to be added to this list? <a href="mailto:user@geode.apache.org">Contact us!</a></i><p>
-			</div>
-		</div>
-	</div>
 </section>
 
 <section class="bf-community committers">
     <div class="container">
     	<div class="row">
-    	    <div class="col-md-12">
+            <div class="col-md-12">
     	    	<h2 class="icns-group" id="committers"><span>Committers</span></h2>
-			</div>
-		</div>
-		<div class="row">
+                <a target="_blank" href="https://projects.apache.org/committee.html?geode">Lists of PMC members and Committers</a>
+            </div>
+        </div>
+        <div class="row">
       <br/>
-			<div class="col-md-2">
-        <li>Amey Barve</li>
-        <li>Adib Saikali</li>
-        <li>Alan Strait</li>
-        <li>Amogh Shetkar</li>
-        <li>Anil Gingade</li>
-        <li>Anilkumar Gingade</li>
-        <li>Anthony Baker</li>
-        <li>Ashvin Agrawal</li>
-        <li>Asif Shahid</li>
-        <li>Avinash Dongre</li>
-        <li>Barry Oglesby</li>
-        <li>Ben Reser</li>
-        <li>Bruce Schuchardt</li>
-        <li>Bruce Szalwinski</li>
-        <li>Catherine Johnson</li>
-        <li>Chip Childers</li>
-        <li>Christian Tzolov</li>
-        <li>Dan Smith</li>
-        <li>Darrel Schneider</li>
-        <li>Dave Barnes</li>
-        <li>Dave Muirhead</li>
-        <li>David Yozie</li>
-        <li>Deepak Dixit</li>
-        <li>Dick Cavender</li>
-        <li>Edin Zulich</li>
-			</div>
-			<div class="col-md-2">
-        <li>Ernest Burghardt</li>
-        <li>Eric Shu</li>
-        <li>Galen O’Sullivan</li>
-        <li>Gideon Low</li>
-        <li>Greg Chase</li>
-        <li>Hemant Bhanawat</li>
-        <li>Henry Saputra</li>
-        <li>Hitesh Khamesra</li>
-        <li>Jacob Barrett</li>
-        <li>Jags Ramnarayan</li>
-        <li>Jan Iversen</li>
-        <li>Jared Stewart</li>
-        <li>Jason Huynh</li>
-        <li>Jens Deppe</li>
-        <li>Jianxia Chen</li>
-        <li>Jinmei Liao</li>
-        <li>Joey McAllister</li>
-        <li>John Blum</li>
-        <li>Justin Erenkrantz</li>
-        <li>Karen Smoler Miller</li>
-        <li>Ken Howe</li>
-        <li>Ketan Deshpande</li>
-        <li>Kevin Duling</li>
-        <li>Kirk Lund</li>
-			</div>
-			<div class="col-md-2">
-        <li>Kishor Bachhav</li>
-        <li>Konstantin Boudnik</li>
-        <li>Konstantin Ignatyev</li>
-        <li>Lise Storc</li>
-        <li>Luke Shannon</li>
-        <li>Lyndon Adams</li>
-        <li>Lynn Gallinat</li>
-        <li>Lynn Hughes-Godfrey</li>
-        <li>Mark Bretl</li>
-        <li>Michael Schubert</li>
-        <li>Mike Stolz</li>
-        <li>Nabarun Nag</li>
-        <li>Namrata Thanvi</li>
-        <li>Neeraj Kumar</li>
-        <li>Nilkanth Patel</li>
-        <li>Nitin Lamba</li>
-        <li>Qihong Chen</li>
-        <li>Rahul Diyewar</li>
-        <li>Randy May</li>
-        <li>Roman Shaposhnik</li>
-        <li>Sai Boorlagadda</li>
-        <li>Severine Tymon</li>
-        <li>Shatarupa Nandi</li>
-        <li>Shirish Deshmukh</li>
-			</div>
-			<div class="col-md-2">
-        <li>Sonal Agarwal</li>
-        <li>Soubhik Chakraborty</li>
-        <li>Sourabh Bansod</li>
-        <li>Stephane Maldini</li>
-        <li>Stuart Williams</li>
-        <li>Sudhir Menon</li>
-        <li>Sunil Jigyasu</li>
-        <li>Supriya Pillai</li>
-        <li>Suranjan Kumar</li>
-        <li>Suyog Bhokare</li>
-        <li>Swapnil Bawaskar</li>
-        <li>Swati Sawant</li>
-        <li>Tushar Khairnar</li>
-        <li>Udo Kohlmeyer</li>
-        <li>Vince Ford</li>
-        <li>Vinesh Prasanna Manoharan</li>
-        <li>Vivek Bhaskar</li>
-        <li>Wes Williams</li>
-        <li>William A. Rowe Jr.</li>
-        <li>William Markito</li>
-        <li>Will Schipp</li>
-        <li>Xiaojian Zhou</li>
-        <li>Yogesh Mahajan</li>
-			</div>
       <div class="col-md-3">
         <h3>&nbsp;</h3>
             <p><i>Want to be added to this list? Join the community, contribute and <a href="mailto:dev@geode.apache.org">contact us!</a></i><p>
@@ -253,23 +128,3 @@ under the License. -->
 	</div>
 </section>
 
-<!-- <section class="bf-community tools">
-    <div class="container">
-    	<div class="row">
-    	    <div class="col-md-12">
-    	    	<h2 class="icns-tools" id="tools"><span>Tools</span></h2>
-			</div>
-		</div>
-		 <div class="row">
-			<div class="col-md-2 text-center">
-				<a href="http://www.jetbrains.com/idea/" target="_blank"><img src="/img/intellij.png" /></a>
-				<p>IntelliJ IDEA</p>
-			</div>
-			<div class="col-md-2 text-center">
-				<a href="http://yourkit.com/" target="_blank"><img src="/img/yourkit.jpeg" /></a>
-				<p>YourKit Java Profiler</p>
-			</div>
-		</div>
-		These great companies have provided free product licenses to the Apache Geode team. We use these tools and love them.  Thank you!
-	</div>
-</section> -->
