--- a/website/content/releases/index.html
+++ b/website/content/releases/index.html
@@ -34,6 +34,59 @@ under the License. -->
       <!-- RELEASES -->
       <div class="container">
 
+        <!-- START OF 1.8.0-->
+        <h3>1.8.0</h3>
+        <!-- RELEASE NOTES -->
+        <strong><a target="_blank" href="https://cwiki.apache.org/confluence/display/GEODE/Release+Notes">Release Notes</a></strong>
+        <p/>
+
+        <!-- BINARY -->
+        <span> <strong>Binaries </strong>
+          [ <a target="_blank" href="http://apache.org/dyn/closer.cgi/geode/1.8.0/apache-geode-1.8.0.zip">ZIP</a>, <a target="_blank" href="https://www.apache.org/dist/geode/1.8.0/apache-geode-1.8.0.zip.sha256">SHA-256</a>,
+          <a target="_blank" href="https://www.apache.org/dist/geode/1.8.0/apache-geode-1.8.0.zip.asc">PGP</a> ] -
+          [<a target="_blank" href="http://apache.org/dyn/closer.cgi/geode/1.8.0/apache-geode-1.8.0.tgz">TGZ</a>, <a target="_blank" href="https://www.apache.org/dist/geode/1.8.0/apache-geode-1.8.0.tgz.sha256">SHA-256</a>,
+          <a target="_blank" href="https://www.apache.org/dist/geode/1.8.0/apache-geode-1.8.0.tgz.asc">PGP</a> ]
+        </span><br/>
+        <!-- SOURCE -->
+        <span> <strong>Source</strong>
+           [ <a target="_blank" href="http://apache.org/dyn/closer.cgi/geode/1.8.0/apache-geode-1.8.0-src.zip">ZIP</a>, <a target="_blank" href="https://www.apache.org/dist/geode/1.8.0/apache-geode-1.8.0-src.zip.sha256">SHA-256</a>,
+           <a target="_blank" href="https://www.apache.org/dist/geode/1.8.0/apache-geode-1.8.0-src.zip.asc">PGP</a>
+            ] -
+           [<a target="_blank" href="http://apache.org/dyn/closer.cgi/geode/1.8.0/apache-geode-1.8.0-src.tgz">TGZ</a>, <a target="_blank" href="https://www.apache.org/dist/geode/1.8.0/apache-geode-1.8.0-src.tgz.sha256">SHA-256</a>,
+           <a target="_blank" href="https://www.apache.org/dist/geode/1.8.0/apache-geode-1.8.0-src.tgz.asc">PGP</a>
+           ]
+         </span><br/>
+        <!-- Examples -->
+        <span> <strong>Examples</strong>
+           [ <a target="_blank" href="http://apache.org/dyn/closer.cgi/geode/1.8.0/apache-geode-examples-1.8.0.zip">ZIP</a>, <a target="_blank" href="https://www.apache.org/dist/geode/1.8.0/apache-geode-examples-1.8.0.zip.sha256">SHA-256</a>,
+           <a target="_blank" href="https://www.apache.org/dist/geode/1.8.0/apache-geode-examples-1.8.0.zip.asc">PGP</a>
+            ] -
+           [<a target="_blank" href="http://apache.org/dyn/closer.cgi/geode/1.8.0/apache-geode-examples-1.8.0.tar.gz">TAR.GZ</a>, <a target="_blank" href="https://www.apache.org/dist/geode/1.8.0/apache-geode-examples-1.8.0.tar.gz.sha256">SHA-256</a>,
+           <a target="_blank" href="https://www.apache.org/dist/geode/1.8.0/apache-geode-examples-1.8.0.tar.gz.asc">PGP</a>
+           ]
+         </span><br/>
+
+        <!-- DEPENDENCY MANAGERS -->
+        <div class="container">
+          <strong>Gradle</strong>
+<pre class="prettyprint">
+dependencies {
+  compile 'org.apache.geode:geode-core:1.8.0'
+}
+</pre>
+          <strong>Maven</strong>
+<pre class="prettyprint">
+&lt;dependencies&gt;
+  &lt;dependency&gt;
+    &lt;groupId&gt;org.apache.geode&lt;/groupId&gt;
+    &lt;artifactId&gt;geode-core&lt;/artifactId&gt;
+    &lt;version&gt;1.8.0&lt;/version&gt;
+  &lt;/dependency&gt;
+&lt;/dependencies&gt;
+</pre>
+        </div>
+        <!-- END OF 1.8.0 -->
+
         <!-- START OF 1.7.0-->
         <h3>1.7.0</h3>
         <!-- RELEASE NOTES -->
