Remove 1.8.0 Zip files and add Geode Native files

--- a/website/content/releases/index.html
+++ b/website/content/releases/index.html
@@ -42,18 +42,19 @@ under the License. -->
 
         <!-- BINARY -->
         <span> <strong>Binaries </strong>
-          [ <a target="_blank" href="http://apache.org/dyn/closer.cgi/geode/1.8.0/apache-geode-1.8.0.zip">ZIP</a>, <a target="_blank" href="https://www.apache.org/dist/geode/1.8.0/apache-geode-1.8.0.zip.sha256">SHA-256</a>,
-          <a target="_blank" href="https://www.apache.org/dist/geode/1.8.0/apache-geode-1.8.0.zip.asc">PGP</a> ] -
           [<a target="_blank" href="http://apache.org/dyn/closer.cgi/geode/1.8.0/apache-geode-1.8.0.tgz">TGZ</a>, <a target="_blank" href="https://www.apache.org/dist/geode/1.8.0/apache-geode-1.8.0.tgz.sha256">SHA-256</a>,
           <a target="_blank" href="https://www.apache.org/dist/geode/1.8.0/apache-geode-1.8.0.tgz.asc">PGP</a> ]
         </span><br/>
         <!-- SOURCE -->
         <span> <strong>Source</strong>
-           [ <a target="_blank" href="http://apache.org/dyn/closer.cgi/geode/1.8.0/apache-geode-1.8.0-src.zip">ZIP</a>, <a target="_blank" href="https://www.apache.org/dist/geode/1.8.0/apache-geode-1.8.0-src.zip.sha256">SHA-256</a>,
-           <a target="_blank" href="https://www.apache.org/dist/geode/1.8.0/apache-geode-1.8.0-src.zip.asc">PGP</a>
-            ] -
-           [<a target="_blank" href="http://apache.org/dyn/closer.cgi/geode/1.8.0/apache-geode-1.8.0-src.tgz">TGZ</a>, <a target="_blank" href="https://www.apache.org/dist/geode/1.8.0/apache-geode-1.8.0-src.tgz.sha256">SHA-256</a>,
+          [<a target="_blank" href="http://apache.org/dyn/closer.cgi/geode/1.8.0/apache-geode-1.8.0-src.tgz">TGZ</a>, <a target="_blank" href="https://www.apache.org/dist/geode/1.8.0/apache-geode-1.8.0-src.tgz.sha256">SHA-256</a>,
            <a target="_blank" href="https://www.apache.org/dist/geode/1.8.0/apache-geode-1.8.0-src.tgz.asc">PGP</a>
+           ]
+         </span><br/>
+        <!-- NATIVE CLIENT SOURCE -->
+        <span> <strong>Geode Native Source</strong>
+          [<a target="_blank" href="http://apache.org/dyn/closer.cgi/geode/1.8.0/apache-geode-native-1.8.0-Source.tar.gz">TAR.GZ</a>, <a target="_blank" href="https://www.apache.org/dist/geode/1.8.0/apache-geode-native-1.8.0-Source.tar.gz.sha512">SHA-512</a>,
+           <a target="_blank" href="https://www.apache.org/dist/geode/1.8.0/apache-geode-native-1.8.0-Source.tar.gz.asc">PGP</a>
            ]
          </span><br/>
         <!-- Examples -->
