--- a/releases/index.html
+++ b/releases/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <!-- Licensed to the Apache Software Foundation (ASF) under one
   or more contributor license agreements.  See the NOTICE file
@@ -38,8 +39,6 @@
     <link href="/css/geode-site.css" rel="stylesheet" type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:200,400,500,300,600,800,700,400italic,600italic,700italic,800italic,300italic" rel="stylesheet" type="text/css">
     <link href="/css/font-awesome.min.css" rel="stylesheet" type='text/css'>
-
-    
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements. All other JS at the end of file. -->
     <!--[if lt IE 9]>
@@ -95,7 +94,6 @@ software distributed under the License is distributed on an
 KIND, either express or implied.  See the License for the
 specific language governing permissions and limitations
 under the License. -->
-
 <section class="bf-tagline">
     <div class="container">
     	<div class="row">
@@ -112,6 +110,60 @@ under the License. -->
     		<div class="col-md-9">
       <!-- RELEASES -->
       <div class="container">
+
+        <!-- START OF 1.8.0-->
+        <h3>1.8.0</h3>
+        <!-- RELEASE NOTES -->
+        <strong><a target="_blank" href="https://cwiki.apache.org/confluence/display/GEODE/Release+Notes">Release Notes</a></strong>
+        <p/>
+
+        <!-- BINARY -->
+        <span> <strong>Binaries </strong>
+          [<a target="_blank" href="http://apache.org/dyn/closer.cgi/geode/1.8.0/apache-geode-1.8.0.tgz">TGZ</a>, <a target="_blank" href="https://www.apache.org/dist/geode/1.8.0/apache-geode-1.8.0.tgz.sha256">SHA-256</a>,
+          <a target="_blank" href="https://www.apache.org/dist/geode/1.8.0/apache-geode-1.8.0.tgz.asc">PGP</a> ]
+        </span><br/>
+        <!-- SOURCE -->
+        <span> <strong>Source</strong>
+          [<a target="_blank" href="http://apache.org/dyn/closer.cgi/geode/1.8.0/apache-geode-1.8.0-src.tgz">TGZ</a>, <a target="_blank" href="https://www.apache.org/dist/geode/1.8.0/apache-geode-1.8.0-src.tgz.sha256">SHA-256</a>,
+           <a target="_blank" href="https://www.apache.org/dist/geode/1.8.0/apache-geode-1.8.0-src.tgz.asc">PGP</a>
+           ]
+         </span><br/>
+        <!-- NATIVE CLIENT SOURCE -->
+        <span> <strong>Geode Native Source</strong>
+          [<a target="_blank" href="http://apache.org/dyn/closer.cgi/geode/1.8.0/apache-geode-native-1.8.0-Source.tar.gz">TAR.GZ</a>, <a target="_blank" href="https://www.apache.org/dist/geode/1.8.0/apache-geode-native-1.8.0-Source.tar.gz.sha512">SHA-512</a>,
+           <a target="_blank" href="https://www.apache.org/dist/geode/1.8.0/apache-geode-native-1.8.0-Source.tar.gz.asc">PGP</a>
+           ]
+         </span><br/>
+        <!-- Examples -->
+        <span> <strong>Examples</strong>
+           [ <a target="_blank" href="http://apache.org/dyn/closer.cgi/geode/1.8.0/apache-geode-examples-1.8.0.zip">ZIP</a>, <a target="_blank" href="https://www.apache.org/dist/geode/1.8.0/apache-geode-examples-1.8.0.zip.sha256">SHA-256</a>,
+           <a target="_blank" href="https://www.apache.org/dist/geode/1.8.0/apache-geode-examples-1.8.0.zip.asc">PGP</a>
+            ] -
+           [<a target="_blank" href="http://apache.org/dyn/closer.cgi/geode/1.8.0/apache-geode-examples-1.8.0.tar.gz">TAR.GZ</a>, <a target="_blank" href="https://www.apache.org/dist/geode/1.8.0/apache-geode-examples-1.8.0.tar.gz.sha256">SHA-256</a>,
+           <a target="_blank" href="https://www.apache.org/dist/geode/1.8.0/apache-geode-examples-1.8.0.tar.gz.asc">PGP</a>
+           ]
+         </span><br/>
+
+        <!-- DEPENDENCY MANAGERS -->
+        <div class="container">
+          <strong>Gradle</strong>
+<pre class="prettyprint">
+dependencies {
+  compile 'org.apache.geode:geode-core:1.8.0'
+}
+</pre>
+          <strong>Maven</strong>
+<pre class="prettyprint">
+&lt;dependencies&gt;
+  &lt;dependency&gt;
+    &lt;groupId&gt;org.apache.geode&lt;/groupId&gt;
+    &lt;artifactId&gt;geode-core&lt;/artifactId&gt;
+    &lt;version&gt;1.8.0&lt;/version&gt;
+  &lt;/dependency&gt;
+&lt;/dependencies&gt;
+</pre>
+        </div>
+        <!-- END OF 1.8.0 -->
 
         <!-- START OF 1.7.0-->
         <h3>1.7.0</h3>
