--- a/404.html
+++ b/404.html
@@ -35,39 +35,16 @@
       <div class='main'>
         <header>
           <a id='logo' href='/'></a>
-          <div id='navigation'>
-            <ul>
-              <li id='gettingstartedlink'><a href='/getting-started'>Getting Started</a></li>
-              <li id='communitylink'><a href='/community'>Community</a></li>
-              <li id='contributelink'><a href='/contribute'>Contribute</a></li>
-              <li id='docslink'><a href='/docs'>Docs</a></li>
-              <li id='aboutlink'><a href='/about'>About</a></li>
-              <li id='downloadlink'><a href='/download'>Download</a></li>
-            </ul>
-          </div>
         </header>
         <div id='content'>
             <h1>File Not Found</h1>
         </div>
+            <a href="https://geode.apache.org/">Return to the Apache Geode website</a>
       </div>
       <footer id="footer">
         <div class="container">
-            <ul>
-              <li><a href='http://stackoverflow.com/questions/tagged/geode+or+gemfire'>Stack Overflow</a></li>
-              <li>•</li>
-              <li><a href='https://issues.apache.org/jira/browse/GEODE'>JIRA</a></li>
-              <li>•</li>
-              <li><a href='http://mail-archives.apache.org/mod_mbox/incubator-geode-dev/'>Dev Mailing List</a></li>
-              <li>•</li>
-              <li><a href='https://cwiki.apache.org/confluence/display/GEODE/Index'>Wiki</a></li>
-            </ul>
             <div class="row">
-                <div class="col-md-4 col-sm-5">
-                    <div class="logo"><a href="#wrapper"><img src="/images/egg-logo1.png"></a></div>
-                </div>
                 <div class="col-md-4 col-sm-4">
-                    <p style="text-align: center">
-                       Apache Geode is an effort undergoing incubation at The Apache Software Foundation (ASF), sponsored by the Incubator. Incubation is required of all newly accepted projects until a further review indicates that the infrastructure, communications, and decision making process have stabilized in a manner consistent with other successful ASF projects. While incubation status is not necessarily a reflection of the completeness or stability of the code, it does indicate that the project has yet to be fully endorsed by the ASF.
                      <p style="text-align: center">
                         Copyright &copy; <script>var d = new Date();document.write(d.getFullYear());</script> <a href="http://www.apache.org/">The Apache Software Foundation</a>.<br> Apache, Apache Geode (incubating), the Apache feather, Geode logo are trademarks of The Apache Software Foundation. 
                     </p>
