--- a/website/content/releases/index.html
+++ b/website/content/releases/index.html
@@ -386,9 +386,11 @@ dependencies {
         			</br></br>
         		</p>
     			<p>
-					Alternatively, you can verify the MD5 signature on the files. A Unix program called md5 or md5sum is included in many Unix distributions. It is also available as part of <a href="http://www.gnu.org/software/textutils/textutils.html">GNU Textutils</a>. Windows users can get binary md5 programs from <a href="http://www.fourmilab.ch/md5/">here</a>, <a href="http://www.pc-tools.net/win32/md5sums/">here</a>, or <a href="http://www.slavasoft.com/fsum/">here</a>.
+				Alternatively, you can verify the MD5 signature on the files. A Unix program called md5 or md5sum is included in many Unix distributions. 
+                                It is also available as part of <a href="http://www.gnu.org/software/textutils/textutils.html">GNU Textutils</a>. 
+                                Windows users can get binary md5 programs from <a href="http://www.fourmilab.ch/md5/">Fourmilab.ch</a>, <a href="http://www.pc-tools.net/win32/md5sums/">PC-Tools.Net</a>, or <a href="http://www.slavasoft.com/fsum/">SlavaSoft.com</a>.
 				<p>
-					If you want to build directly from source, instructions are within the User Documentation in the <a href="http://geode.apache.org/docs/guide/getting_started/installation/install_standalone.html">How to Install</a> subsection.
+					If you want to build directly from source, see the BUILDING.md file in the top-level source directory.
 				</p>
 			</div>
 		</div>
