Update the bullet point regarding available clients to include C++ and C# .NET as currently available. No longer promise Node.js

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ under the License. -->
           <div class="col-md-4">
               <div class="bf-icon-wrap" style="font-size:30px; vertical-align: -5px;" aria-hidden="true"><i class="fa fa-desktop"></i><i class="fa fa-laptop"></i></div>
               <h3>Clients</h3>
-              <p>Clients are available for Java. (C++, C# .NET and Node.js coming soon.) A REST API is available for all other languages.</p>
+              <p>Clients are available for Java, C++, and C# .NET. A REST API is available for all other languages.</p>
           </div>
         </div>
       <div class="row">
