--- a/index.html
+++ b/index.html
@@ -40,8 +40,6 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:200,400,500,300,600,800,700,400italic,600italic,700italic,800italic,300italic" rel="stylesheet" type="text/css">
     <link href="/css/font-awesome.min.css" rel="stylesheet" type='text/css'>
 
-    
-
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements. All other JS at the end of file. -->
     <!--[if lt IE 9]>
       <script src="js/html5shiv.js"></script>
@@ -192,7 +190,7 @@ under the License. -->
           <div class="col-md-4">
               <div class="bf-icon-wrap" style="font-size:30px; vertical-align: -5px;" aria-hidden="true"><i class="fa fa-desktop"></i><i class="fa fa-laptop"></i></div>
               <h3>Clients</h3>
-              <p>Clients are available for Java. (C++, C# .NET and Node.js coming soon.) A REST API is available for all other languages.</p>
+              <p>Clients are available for Java, C++, and C# .NET. A REST API is available for all other languages.</p>
           </div>
         </div>
       <div class="row">
