--- a/website/content/index.html
+++ b/website/content/index.html
@@ -21,7 +21,7 @@ under the License. -->
 <section class="bf-masthead" id="content" role="main">
     <div class="bf-masthead-bg">
         <div class="container">
-            <img class="logo-title img-responsive hidden-xs" src="img/apache_geode_logo.png" />
+            <img class="logo-title img-responsive hidden-xs" src="img/Apache_Geode_logo.png" />
             <div class="text-container">
                 <h2 class="tagline"><em>Performance</em> is key. <em>Consistency</em> is a must.</h2>
                 <p class="description">Providing low latency, high concurrency data management solutions since 2002.<br/>
