--- a/website/content/releases/index.html
+++ b/website/content/releases/index.html
@@ -91,39 +91,39 @@ dependencies {
         </div>
         <!-- END OF 1.13.1 -->
 
-        <!-- START OF 1.12.0-->
-        <h3>1.12.0</h3>
+        <!-- START OF 1.12.1-->
+        <h3>1.12.1</h3>
         <!-- RELEASE NOTES -->
         <strong><a target="_blank" href="https://cwiki.apache.org/confluence/display/GEODE/Release+Notes">Release Notes</a></strong>
         <p/>
 
         <!-- BINARY -->
         <span> <strong>Binaries </strong>
-          [<a target="_blank" href="https://apache.org/dyn/closer.cgi/geode/1.12.0/apache-geode-1.12.0.tgz">TGZ</a>, <a target="_blank" href="https://downloads.apache.org/geode/1.12.0/apache-geode-1.12.0.tgz.sha256">SHA-256</a>,
-          <a target="_blank" href="https://downloads.apache.org/geode/1.12.0/apache-geode-1.12.0.tgz.asc">PGP</a> ]
+          [<a target="_blank" href="https://apache.org/dyn/closer.cgi/geode/1.12.1/apache-geode-1.12.1.tgz">TGZ</a>, <a target="_blank" href="https://downloads.apache.org/geode/1.12.1/apache-geode-1.12.1.tgz.sha256">SHA-256</a>,
+          <a target="_blank" href="https://downloads.apache.org/geode/1.12.1/apache-geode-1.12.1.tgz.asc">PGP</a> ]
         </span><br/>
         <!-- SOURCE -->
         <span> <strong>Source</strong>
-          [<a target="_blank" href="https://apache.org/dyn/closer.cgi/geode/1.12.0/apache-geode-1.12.0-src.tgz">TGZ</a>, <a target="_blank" href="https://downloads.apache.org/geode/1.12.0/apache-geode-1.12.0-src.tgz.sha256">SHA-256</a>,
-           <a target="_blank" href="https://downloads.apache.org/geode/1.12.0/apache-geode-1.12.0-src.tgz.asc">PGP</a>
+          [<a target="_blank" href="https://apache.org/dyn/closer.cgi/geode/1.12.1/apache-geode-1.12.1-src.tgz">TGZ</a>, <a target="_blank" href="https://downloads.apache.org/geode/1.12.1/apache-geode-1.12.1-src.tgz.sha256">SHA-256</a>,
+           <a target="_blank" href="https://downloads.apache.org/geode/1.12.1/apache-geode-1.12.1-src.tgz.asc">PGP</a>
            ]
          </span><br/>
         <!-- NATIVE CLIENT SOURCE -->
         <span> <strong>Geode Native Source</strong>
-          [<a target="_blank" href="https://apache.org/dyn/closer.cgi/geode/1.12.0/apache-geode-native-1.12.0-src.tar.gz">TAR.GZ</a>, <a target="_blank" href="https://downloads.apache.org/geode/1.12.0/apache-geode-native-1.12.0-src.tar.gz.sha512">SHA-512</a>,
-           <a target="_blank" href="https://downloads.apache.org/geode/1.12.0/apache-geode-native-1.12.0-src.tar.gz.asc">PGP</a>
+          [<a target="_blank" href="https://apache.org/dyn/closer.cgi/geode/1.12.1/apache-geode-native-1.12.1-src.tgz">TGZ</a>, <a target="_blank" href="https://downloads.apache.org/geode/1.12.1/apache-geode-native-1.12.1-src.tgz.sha256">SHA-256</a>,
+           <a target="_blank" href="https://downloads.apache.org/geode/1.12.1/apache-geode-native-1.12.1-src.tgz.asc">PGP</a>
            ]
          </span><br/>
         <!-- BENCHMARKS -->
         <span> <strong>Benchmarks</strong>
-          [<a target="_blank" href="https://apache.org/dyn/closer.cgi/geode/1.12.0/apache-geode-benchmarks-1.12.0-src.tgz">TGZ</a>, <a target="_blank" href="https://downloads.apache.org/geode/1.12.0/apache-geode-benchmarks-1.12.0-src.tgz.sha256">SHA-256</a>,
-           <a target="_blank" href="https://downloads.apache.org/geode/1.12.0/apache-geode-benchmarks-1.12.0-src.tgz.asc">PGP</a>
+          [<a target="_blank" href="https://apache.org/dyn/closer.cgi/geode/1.12.1/apache-geode-benchmarks-1.12.1-src.tgz">TGZ</a>, <a target="_blank" href="https://downloads.apache.org/geode/1.12.1/apache-geode-benchmarks-1.12.1-src.tgz.sha256">SHA-256</a>,
+           <a target="_blank" href="https://downloads.apache.org/geode/1.12.1/apache-geode-benchmarks-1.12.1-src.tgz.asc">PGP</a>
            ]
          </span><br/>
         <!-- Examples -->
         <span> <strong>Examples</strong>
-           [<a target="_blank" href="https://apache.org/dyn/closer.cgi/geode/1.12.0/apache-geode-examples-1.12.0.tar.gz">TAR.GZ</a>, <a target="_blank" href="https://downloads.apache.org/geode/1.12.0/apache-geode-examples-1.12.0.tar.gz.sha256">SHA-256</a>,
-           <a target="_blank" href="https://downloads.apache.org/geode/1.12.0/apache-geode-examples-1.12.0.tar.gz.asc">PGP</a>
+           [<a target="_blank" href="https://apache.org/dyn/closer.cgi/geode/1.12.1/apache-geode-examples-1.12.1-src.tgz">TGZ</a>, <a target="_blank" href="https://downloads.apache.org/geode/1.12.1/apache-geode-examples-1.12.1-src.tgz.sha256">SHA-256</a>,
+           <a target="_blank" href="https://downloads.apache.org/geode/1.12.1/apache-geode-examples-1.12.1-src.tgz.asc">PGP</a>
            ]
          </span><br/>
 
@@ -132,7 +132,7 @@ dependencies {
           <strong>Gradle</strong>
 <pre class="prettyprint">
 dependencies {
-  compile 'org.apache.geode:geode-core:1.12.0'
+  compile 'org.apache.geode:geode-core:1.12.1'
 }
 </pre>
           <strong>Maven</strong>
@@ -141,12 +141,12 @@ dependencies {
   &lt;dependency&gt;
     &lt;groupId&gt;org.apache.geode&lt;/groupId&gt;
     &lt;artifactId&gt;geode-core&lt;/artifactId&gt;
-    &lt;version&gt;1.12.0&lt;/version&gt;
+    &lt;version&gt;1.12.1&lt;/version&gt;
   &lt;/dependency&gt;
 &lt;/dependencies&gt;
 </pre>
         </div>
-        <!-- END OF 1.12.0 -->
+        <!-- END OF 1.12.1 -->
 
         <!-- START OF 1.11.0-->
         <h3>1.11.0</h3>
