--- a/releases/index.html
+++ b/releases/index.html
@@ -114,7 +114,7 @@ under the License. -->
         <!-- START OF 1.13.2-->
         <h3>1.13.2</h3>
         <!-- RELEASE NOTES -->
-        <strong><a target="_blank" href="https://cwiki.apache.org/confluence/display/GEODE/Release+Notes">Release Notes</a></strong>
+        <strong><a target="_blank" href="https://cwiki.apache.org/confluence/display/GEODE/Release+Notes#ReleaseNotes-1.13.2">Release Notes</a></strong>
         <p/>
 
         <!-- BINARY -->
@@ -171,7 +171,7 @@ dependencies {
         <!-- START OF 1.12.1-->
         <h3>1.12.1</h3>
         <!-- RELEASE NOTES -->
-        <strong><a target="_blank" href="https://cwiki.apache.org/confluence/display/GEODE/Release+Notes">Release Notes</a></strong>
+        <strong><a target="_blank" href="https://cwiki.apache.org/confluence/display/GEODE/Release+Notes#ReleaseNotes-1.12.1">Release Notes</a></strong>
         <p/>
 
         <!-- BINARY -->
@@ -228,7 +228,7 @@ dependencies {
         <!-- START OF 1.11.0-->
         <h3>1.11.0</h3>
         <!-- RELEASE NOTES -->
-        <strong><a target="_blank" href="https://cwiki.apache.org/confluence/display/GEODE/Release+Notes">Release Notes</a></strong>
+        <strong><a target="_blank" href="https://cwiki.apache.org/confluence/display/GEODE/Release+Notes#ReleaseNotes-1.11.0">Release Notes</a></strong>
         <p/>
 
         <!-- BINARY -->
