--- a/website/content/releases/index.html
+++ b/website/content/releases/index.html
@@ -234,7 +234,7 @@ dependencies {
 				<p style="margin-left:5%"><tt>
         			gpg --import KEYS
         			</br>
-        			gpg --verify ${filename}.tgz.asc</tt>
+        			gpg --verify ${filename}.tgz.asc ${filename}.tgz</tt>
         		</p>
         <p>
         Alternatively, you can verify the SHA256 checksum on the files. A program called <tt>sha256sum</tt>
