Adding the geode kafka connector to the releases page

--- a/website/content/releases/index.html
+++ b/website/content/releases/index.html
@@ -205,6 +205,25 @@ dependencies {
         </div>
         <!-- END OF 1.12.8 -->
 
+        <!-- START OF Kafka Connector 1.1.0 -->
+        <h3>Geode Kafka Connector 1.1.0 </h3>
+        <!-- RELEASE NOTES -->
+        <strong><a target="_blank" href="https://cwiki.apache.org/confluence/display/GEODE/Release+Notes#ReleaseNotes-KakfaConnector1.1.0">Release Notes</a></strong>
+        <p/>
+        <!-- BINARY -->
+        <span> <strong>Binaries </strong>
+          [<a target="_blank" href="https://apache.org/dyn/closer.cgi/geode/kafka-connector-1.1.0/apache-kafka-connect-geode-1.1.0.zip">ZIP</a>, <a target="_blank" href="https://downloads.apache.org/geode/kafka-connector-1.1.0/apache-kafka-connect-geode-1.1.0.zip.sha256">SHA-256</a>,
+          <a target="_blank" href="https://downloads.apache.org/geode/kafka-connector-1.1.0/apache-kafka-connect-geode-1.1.0.zip.asc">PGP</a> ]
+        </span><br/>
+        <!-- SOURCE -->
+        <span> <strong>Source</strong>
+          [<a target="_blank" href="https://apache.org/dyn/closer.cgi/geode/kafka-connector-1.1.0/geode-kafka-connector-rel-v1.1.0.tar.gz">TGZ</a>, <a target="_blank" href="https://downloads.apache.org/geode/kafka-connector-1.1.0/geode-kafka-connector-rel-v1.1.0.tar.gz.sha256">SHA-256</a>,
+           <a target="_blank" href="https://downloads.apache.org/geode/kafka-connector-1.1.0/geode-kafka-connector-rel-v1.1.0.tar.gz.asc">PGP</a>
+           ]
+         </span><br/>
+        
+        <!-- END OF Kafka Connector 1.1.0 -->
+
       </div>
       <p>If you need access to older releases they can be found in the <a target="_blank" href="https://archive.apache.org/dist/geode/">release archives</a>.</p>
       <!-- END OF RELEASE -->
