Update some links to https

--- a/website/content/community/index.html
+++ b/website/content/community/index.html
@@ -101,7 +101,7 @@ under the License. -->
 		</div>
 		<div class="row">
       <div class="col-md-4">
-        	<h3><a target="_blank" href="http://stackoverflow.com/search?q=Apache%20Geode">StackOverflow</a></h3>
+        	<h3><a target="_blank" href="https://stackoverflow.com/search?q=Apache%20Geode">StackOverflow</a></h3>
         	<p>The Geode team is always ready to answer questions on <a href="http://stackoverflow.com/search?q=Apache%20Geode">StackOverflow</a><p>
       </div>
       <div class="col-md-4">
