--- a/website/content/releases/index.html
+++ b/website/content/releases/index.html
@@ -22,7 +22,7 @@ under the License. -->
     	<div class="row">
           <br />
     	    	<h2>Apache Geode Releases</h2>
-    		<p>Releases of Geode are made available to the general public at no charge, under the <a target="_blank" href="http://apache.org/licenses/">Apache License</a>, in both binary and source distributions.  Binary downloads are provided for the convenience of our users and are not official Apache Geode releases.</p>
+    		<p>Releases of Geode are made available to the general public at no charge, under the <a target="_blank" href="https://apache.org/licenses/">Apache License</a>, in both binary and source distributions.  Binary downloads are provided for the convenience of our users and are not official Apache Geode releases.</p>
 		</div>
 	</div>
 </section>
